service 레이어 jpa에 맞게 수정